--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -27,8 +27,9 @@
   }
   
   .additional-content {
+    font-family: 'Arial', sans-serif;
     position: absolute;
-    top: 50%;
+    top: 80%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -36,6 +37,7 @@
   }
   
   .close-button {
+    
     position: absolute;
     top: 10px;
     right: 10px;
